...
                    backgroundColor="transparent"
                />
            </View>

            {/* Tabs */}
            <View style={[styles.tabContainer, { color: colours[theme].text }]}>
                {['Invitations', 'Preferences'].map(tab => (
                    <TouchableOpacity key={tab} onPress={() => { logButtonPress(`Tab: ${tab}`); setSelectedTab(tab); }}>
                        <Text style={[
                            styles.tabText , {color: colours[theme].text},
                            selectedTab === tab && { ...styles.tabTextSelected, borderBottomColor: colours[theme].text
                            ,color: colours[theme].text }
                        ]}>
...
