appId: com.anonymous.BathLinkApp
---
- clearState: com.anonymous.BathLinkApp
- launchApp
- tapOn: username/email
- inputText: hc2306@bath.ac.uk
- tapOn: Password
- inputText: Password9!
- tapOn: Login
- assertVisible: Meetups
